# ROS-Noetic-Multi-robot-Sandbox

./: LICENSE  README.md
docs/: maps.md  multi-robot-exploration.md  multi-robot-guidelines.md  robots.md  usage.md  working_environment.md
docs/nodes/: alysson2024.md  alysson2024_node.md  average_displacement.md  cspace.md  cspace_node.md  desai_controler.md  fb_map_fusion_relative.md  frontier_discovery.md  frontier_discovery_node.md  gmapping_pose.md  gmapping_pose_node.md  integrated_global_planner_node.md  laser_noiser.md  laser_to_world.md  laser_to_world_node.md  local_cspace_node.md  local_dynamic_map.md  local_planner_node.md  map_stitching_node.md  mock_communication_model.md  mock_communication_model_node.md  mock_network_handler.md  mre_local_planner.md  potential_field_local_planner.md  randomized_social_welfare.md  randomized_social_welfare_node.md  relative_pose_estimator.md  relative_pose_estimator_node.md  sub_goal_navigation.md  yamauchi1999.md  yamauchi1999_node.md
gazebo_resources/worlds/: boxes.world
src/multirobotexploration/: CMakeLists.txt
src/multirobotexploration/config/: rendezvous_footprint.yaml  rendezvous_plan.yaml
src/multirobotexploration/include/: RRTRoot.h  RendezvousPlan.h  SearchAlgorithms.h
src/multirobotexploration/include/common/: Common.h  RRTRoot.h
src/multirobotexploration/include/nodes/: Alysson2024Node.h  AverageVelocityEstimatorNode.h  CSpaceNode.h  FrontierDiscoveryNode.h  LocalCSpaceNode.h  LocalPlannerNode.h  MockCommunicationModel.h  MockCommunicationModelNode.h  RandomizedSocialWelfareNode.h  Yamauchi1999Node.h
src/multirobotexploration/launch/: exploration_stack_bringup.launch  gmapping.launch
src/multirobotexploration/rviz/: robot_0.rviz  robot_0_full.rviz  robot_1.rviz  robot_2.rviz
src/multirobotexploration/source/algorithms/: RRTRoot.cpp  RendezvousPlan.cpp  SearchAlgorithms.cpp
src/multirobotexploration/source/communication/: MockCommunicationModel.cpp  MockCommunicationModelNode.cpp  MockNetworkHandler.cpp
src/multirobotexploration/source/frontier/: FrontierDiscovery.cpp  FrontierDiscoveryNode.cpp
src/multirobotexploration/source/laser/: LaserNoiser.cpp  LaserToWorld.cpp  LaserToWorldNode.cpp
src/multirobotexploration/source/localization/: AverageDisplacement.cpp  AverageVelocityEstimatorNode.cpp  GmappingPose.cpp  GmappingPoseNode.cpp  RelativePoseEstimator.cpp  RelativePoseEstimatorNode.cpp
src/multirobotexploration/source/map/: CSpace.cpp  CSpaceNode.cpp  FBMapFusionRelative.cpp  LocalCSpaceNode.cpp  LocalDynamicMap.cpp  MapStitchingNode.cpp
src/multirobotexploration/source/navigation/: DesaiController.cpp  IntegratedGlobalPlannerNode.cpp  LocalPlannerNode.cpp  MRELocalPlanner.cpp  PotentialFieldLocalPlanner.cpp  SubGoalNav.cpp
src/multirobotexploration/source/policies/: Alysson2024.cpp  Alysson2024Node.cpp  RandomizedSocialWelfare.cpp  RandomizedSocialWelfareNode.cpp  Yamauchi1999.cpp  Yamauchi1999Node.cpp
src/multirobotsimulations/launch/: gazebo_add_robot.launch  gazebo_multi_robot_bringup.launch
src/multirobotsimulations/msg/: Frontiers.msg
src/multirobotsimulations/robots/pioneer3at/urdf/: pioneer3at.urdf
src/scripts/: run_simulation.sh
